--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
 fastapi==0.91.0
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.3
 httptools==0.5.0
